--- a/card/index.html
+++ b/card/index.html
@@ -1,8 +1,24 @@
 <html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        
-    </body>
+
+<head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+    <div class="container">
+        <div class="card">
+            <div class="img">
+            </div>
+            <div class="main-text">
+                An Above Average Experience
+            </div>
+            <div class="secondary-text">
+                Travel to the premiere mountain tops of New Zealand with our guided tours. Take in the majestic scenary
+                and witness beauty.
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
