--- a/card/index.html
+++ b/card/index.html
@@ -7,17 +7,17 @@
 
 <body>
     <div class="container">
-        <div class="card">
-            <div class="img">
-            </div>
-            <div class="main-text">
-                An Above Average Experience
-            </div>
-            <div class="secondary-text">
-                Travel to the premiere mountain tops of New Zealand with our guided tours. Take in the majestic scenary
-                and witness beauty.
-            </div>
+        <a href="#">
+            <img src="mountain.jpg" class="photo" alt="moutains"> </a>
+        <div class="content">
+            <p class="title">An Above Average Experience</p>
+            <p class="description"> Travel to the premiere mountain tops of New Zealand with our guided tours. Take in
+                the majestic
+                scenary
+                and witness beauty.</p>
+            <img src="link.svg" class="link" alt="link">
         </div>
+    </div>
     </div>
 </body>
 
