--- a/card/index.html
+++ b/card/index.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
     <link rel="stylesheet" href="index.css">
 </head>
@@ -8,15 +10,17 @@
 <body>
     <div class="container">
         <a href="#">
-            <img src="mountain.jpg" class="photo" alt="moutains"> </a>
-        <div class="content">
-            <p class="title">An Above Average Experience</p>
-            <p class="description"> Travel to the premiere mountain tops of New Zealand with our guided tours. Take in
-                the majestic
-                scenary
-                and witness beauty.</p>
-            <img src="link.svg" class="link" alt="link">
-        </div>
+            <img src="mountain.jpg" class="photo" alt="moutains">
+            <div class="content">
+                <p class="title">An Above Average Experience</p>
+                <p class="description"> Travel to the premiere mountain tops of New Zealand with our guided tours. Take
+                    in
+                    the majestic
+                    scenary
+                    and witness beauty.</p>
+                <img src="link.svg" class="link" alt="link">
+        </a>
+    </div>
     </div>
     </div>
 </body>
